tests/invalid/missing_semicolon.ar
fn get(n: usize)
{
    const i = n
}
